--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>Angular 2 TypeScript Gulp QuickStart</title>
+    <base href="/">
+    <title>Drive Music Player</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -22,7 +23,7 @@
     <script src="systemjs.config.js"></script>
     <script>
             System.import('app')
-                    .then(null, console.error.bind(console));
+                    .then (null, console.error.bind(console));
     </script>
 
 </head>
