--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-    <script src="app/array-tools.js"></script>
+    <script src="app/tools/array-tools.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
